--- a/Exercicíos JS com HTML/CalculadoraAdição/assets/css/style.css
+++ b/Exercicíos JS com HTML/CalculadoraAdição/assets/css/style.css
@@ -19,6 +19,7 @@ body {
 }
 
 .container {
+  text-align: center;
   max-width: 640px;
   margin: 50px auto;
   background: #fff;
@@ -28,10 +29,6 @@ body {
 
 .wrapper {
   text-align: center;
-  justify-content: space-between;
-  display: flex;
-  grid-template-columns: repeat(2, 6fr);
-  grid-auto-rows: 425px;
 }
 
 form input,
